--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   },
   "homepage": "https://github.com/andrhome/chat-app#readme",
   "dependencies": {
+    "bad-words": "^3.0.4",
     "express": "^4.17.2",
     "socket-io": "^1.0.0",
     "socket.io": "^4.4.1"
